--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,7 @@ tr {
 
 .imagem {
     max-width: 40vw;
+    height: auto;
     border-radius: 30px;
     box-shadow: 10px 10px 5px rgba(167, 167, 167, 0.534);
     cursor: pointer;
@@ -121,35 +122,50 @@ tr {
     background-color: #92d8be;
 }
 
+.container_imagem_padrao {
+    position: relative;
+    /* Tornar o contêiner uma referência para posicionamento absoluto */
+    display: inline-block;
+    /* Para que o contêiner se ajuste ao tamanho da imagem */
+}
+
 .botao_pages {
-    display: block;
-    z-index: 2;
-    width: 3.65%;
-    /* 70px em relação a 1920px de largura */
-    left: 57.29%;
-    /* 1100px em relação a 1920px de largura */
-    height: 1.85%;
-    /* 20px em relação a 1080px de altura */
-    top: 66.5%;
-    /* 640px em relação a 1080px de altura */
     position: absolute;
+    width: 12.5%;
+    height: 1.85%;
+    /* Posição absoluta em relação ao contêiner pai */
+    top: 71.8%;
+    /* Ajuste a parte superior para centrar verticalmente o botão */
+    left: 68.6%;
+    /* Ajuste a esquerda para centrar horizontalmente o botão */
     transform: rotate(-17deg);
-    /* background-color: white; */
+    /* Centralizar o botão completamente */
+    padding: 10px 20px;
+    /* Adicionar preenchimento ao botão para torná-lo clicável */
+    background-color: #007bff00;
+    /* Cor de fundo do botão */
+    color: #fff;
+    /* Cor do texto do botão */
+    border: none;
+    /* Remover a borda do botão */
+    cursor: pointer;
+    /* Alterar o cursor ao passar o mouse sobre o botão */
 }
 
 .botao_pages2 {
-    display: block;
-    z-index: 2;
-    width: 1%;
+    width: 2%;
     /* 1100px em relação a 1920px de largura */
-    height: 1.85%;
+    height: 1.9%;
     /* 20px em relação a 1080px de altura */
     /* 70px em relação a 1920px de largura */
-    left: 52.5%;
-    top: 84.5%;
+    left: 56.6%;
+    top: 93%;
     /* 640px em relação a 1080px de altura */
     position: absolute;
     transform: rotate(-17deg);
+    background-color: #007bff00;
+    border: none;
+    cursor: pointer;
     /* background-color: white; */
 }
 
