--- a/src/App.css
+++ b/src/App.css
@@ -177,3 +177,67 @@ tr {
     flex-direction: column;
     background-color: rgb(83, 13, 150);
 }
+
+input {
+    color: #fff;
+    /* Cor do texto */
+    font-size: 18px;
+    /* Tamanho da fonte */
+    width: 50%;
+    padding: 15px;
+    /* Maior espaço interno */
+    background-color: #33bee97e;
+    /* Cor de fundo mais escura */
+    border: 1px solid #e0138c;
+    /* Adiciona uma borda com cor */
+    border-radius: 4px;
+    outline: none;
+    /* Remove a borda padrão ao focar */
+    transition: background-color 0.3s, border-color 0.3s;
+    /* Adiciona transição suave para animações */
+}
+
+input:focus {
+    background-color: #33bee97e;
+    /* Cor de fundo ao focar */
+    border-color: #e0138c;
+    /* Cor da borda ao focar */
+}
+
+.button_input {
+    width: 15%;
+    height: auto;
+    color: #fff;
+    font-size: 18px;
+    padding: 15px 30px;
+    /* Maior espaço interno horizontal */
+    background-color: #e0138c;
+    /* Cor de fundo do botão */
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin: 30px;
+    border-radius: 15px;
+}
+
+.input_name {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.button_input:hover {
+    background-color: #ff1493;
+    /* Cor de fundo do botão ao passar o mouse */
+}
+
+.nav-link {
+    margin: 50px;
+    background-color: #ff1493;
+    color: white;
+    padding: 15px;
+    border-radius: 15px;
+}
