--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,15 @@ tr {
     background-color: #fff0c3;
 }
 
+.container3 {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #2e7ebe;
+}
+
 .container_imagem2 {
     width: 100%;
     height: 100vh;
@@ -171,7 +180,8 @@ tr {
 
 .container_ranking {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -186,9 +196,9 @@ input {
     width: 50%;
     padding: 15px;
     /* Maior espaço interno */
-    background-color: #33bee97e;
+    background-color: #00000063;
     /* Cor de fundo mais escura */
-    border: 1px solid #e0138c;
+    border: 1px solid #575757;
     /* Adiciona uma borda com cor */
     border-radius: 4px;
     outline: none;
@@ -198,7 +208,7 @@ input {
 }
 
 input:focus {
-    background-color: #33bee97e;
+    background-color: #00000063;
     /* Cor de fundo ao focar */
     border-color: #e0138c;
     /* Cor da borda ao focar */
@@ -211,7 +221,7 @@ input:focus {
     font-size: 18px;
     padding: 15px 30px;
     /* Maior espaço interno horizontal */
-    background-color: #e0138c;
+    background-color: #2f10b671;
     /* Cor de fundo do botão */
     border: none;
     border-radius: 4px;
@@ -230,7 +240,7 @@ input:focus {
 }
 
 .button_input:hover {
-    background-color: #ff1493;
+    background-color: #2f10b671;
     /* Cor de fundo do botão ao passar o mouse */
 }
 
@@ -278,7 +288,7 @@ p {
     display: inline-block;
     margin: 5px;
     padding: 10px 20px;
-    background-color: #3498db;
+    background-color: #34e91c;
     color: white;
     border: none;
     cursor: pointer;
@@ -289,7 +299,7 @@ p {
 /* Estilos para botões desativados (com "X") */
 
 .bottoes[disabled] {
-    background-color: #ccc;
+    background-color: #e02323;
     cursor: not-allowed;
 }
 
